# pynext-turbo

./: .env  .gitignore  .prettierignore  .prettierrc  README.md  docker-compose.prod.yml  docker-compose.yml  init_dev.sh  package.json  pnpm-lock.yaml  render.yaml  turbo.json  vercel.json
apps/api/: .env.example  .gitignore  Dockerfile  init.sql  nodemon.json  openapi.json  package.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0793e1c94dd5_fix_user_id_to_integer.py  66f40ad337c4_initial_migration.py  e8b9b4d8a5b1_add_user_table_for_auth.py
apps/api/src/: auth.py  config.py  db.py  export_schema.py  main.py  models.py
apps/web/: .env.example  .gitignore  Dockerfile.prod  eslint.config.mjs  next.config.ts  package.json  tsconfig.json
apps/web/src/: env.mjs
apps/web/src/app/: layout.tsx  page.tsx  providers.tsx
apps/web/src/app/auth/: page.tsx
apps/web/src/app/components/: AddHeroForm.tsx  HeroCard.tsx  HeroList.tsx
apps/web/src/components/auth/: AuthForm.tsx
apps/web/src/components/heroes/: HeroCard.tsx
apps/web/src/components/layout/: Header.tsx
apps/web/src/lib/: auth.tsx
docs/: deploy-hybrid.md  deploy-self-host.md  deploy-vercel-all-in-one.md  deployment.md  development.md
nginx/: nginx.conf
